# Cmake_demo

./: README.md  a.out  test.cpp
CMake_Demo/: README.md
CMake_Demo/Cmake_Lib_test/Cmake_Lib_test/: CMakeLists.txt
CMake_Demo/Cmake_Lib_test/Cmake_Lib_test/lib_testFunc/: CMakeLists.txt  testFunc.cpp  testFunc.h  testFunc2.cpp
CMake_Demo/Cmake_Lib_test/Cmake_Lib_test/src_for_lib/: CMakeLists.txt  main.cpp  main2.cpp
CMake_Demo/cache_var/: CMakeLists.txt
CMake_Demo/cmake_with_add_subdirectory/: CMakeLists.txt
CMake_Demo/cmake_with_add_subdirectory/tests/: CMakeLists.txt
CMake_Demo/configure_demo/: CMakeLists.txt  main.cpp  tutorial_config.h.in
CMake_Demo/dynamic_lib_demo/: CMakeLists.txt  time_stamp
CMake_Demo/dynamic_lib_demo/demo/: main.cpp
CMake_Demo/dynamic_lib_demo/include/: so_demo.h
CMake_Demo/dynamic_lib_demo/src/: dynamic_b.cpp  dynamic_c.cpp
CMake_Demo/env_variable_demo/: CMakeLists.txt
CMake_Demo/install_demo/: CMakeLists.txt  my_math.cpp
CMake_Demo/json_cpp_demo/: CMakeLists.txt  README.md  json_demo.cpp  yolo.json
CMake_Demo/loop_demo/: CMakeLists.txt
CMake_Demo/macro_and_fun/: CMakeLists.txt
CMake_Demo/macro_and_fun/fun_demo/: CMakeLists.txt
CMake_Demo/opencv_cpp_demo/: CMakeLists.txt  main.cpp
CMake_Demo/option_demo/: CMakeLists.txt
CMake_Demo/temp/: CMakeLists.txt
CMake_Demo/variable_demo/: CMakeLists.txt
CMake_Demo/variable_subdirectory_demo/: CMakeLists.txt
CMake_Demo/variable_subdirectory_demo/src/: CMakeLists.txt
CMake_Demo/variable_subdirectory_demo/src_parent_scope/: CMakeLists.txt
CMake_Demo/yaml_demo/: .gitmodules  CMakeLists.txt  main.cpp
CMake_Demo/yaml_demo/config/: coco.yaml
Demo/: CMakeLists.txt  main.cpp
Demo/include/: demo.h
Demo/src/: demo.cpp
STL/: 01  01.cpp  02  02.cpp  03  03.cpp  03.hpp  04  04.cpp  05  05.cpp  05.hpp  06  06.cpp  a.out  deque  deque.cpp  list  list.cpp  stack  stack.cpp  string  string.cpp  string01  string01.cpp  vector  vector.cpp  vector01  vector01.cpp  vector02  vector02.cpp  vector容量大小  vector容量大小.cpp  vector构造函数  vector构造函数.cpp  vector赋值操作  vector赋值操作.cpp
class_and_obj/: class_first.cpp  class_first.h  main.cpp
friend_class_demo/: a.out  friend_class_demo.cpp
func_template_demo/: a.out  func_template_demo.cpp
function_demo/: a.out  lambda_fun_demo.cpp
inheritence_demo/: a.out  diamond_inheritence.cpp  inheritence_construct.cpp  inheritence_demo.cpp
loop_demo/: a.out  lopp_demo.cpp
member_property_demo/: a.out  cude.cpp  test.cpp
operator_demo/: CMakeLists.txt  operator_demo.cpp
polymorhism_demo/: a.out  test.cpp
switch_case_demo/: a.out  switch_case_demo.cpp  test.py
template_class_demo/: a.out  template_02.cpp  template_class_demo  template_class_demo.cpp
test_demo/: nezhaqiche  nezhaqiche.cpp
