cmake_minimum_required(VERSION 3.5.0)
set(CMAKE_CXX_STANDARD 11)
project(demo_CXX)

set(CMAKE_CXX_FLAGS_DEBUG "O0 -ggdb")
# list(FIND CMAKE_CXX_COMPILE_FEATURES cxx_std_11 _cxx11_enable)
# if(_cxx11_enable)
# 	message(STATUS "C++ 11 supported")
# else()
# 	message(FATAL_ERROR "Compiler not supported C++ 11 standard")
# endif()
# unset(_cxx11_enable)
set(SOURCE_FILES src/demo.cpp main.cpp)
add_executable(main ${SOURCE_FILES})
target_include_directories(main PUBLIC ./include)